--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: General setup and install dependencies
         run: |
           git config --global user.name 'Release Bot'
-          git config --global user.email 'simonbengtsson@users.noreply.github.com'
+          git config --global user.email 'trungvt@users.noreply.github.com'
           npm ci
   
       - name: Build and update version
