change repository location

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jspdf-autotable",
   "version": "5.0.2",
+  "name": "jspdf-autotable-extra",
   "description": "Generate pdf tables with javascript (jsPDF plugin)",
   "main": "dist/jspdf.plugin.autotable.js",
   "exports": {
@@ -13,6 +13,9 @@
       "types": "./dist/index.d.ts",
       "default": "./dist/jspdf.plugin.autotable.mjs"
     }
+  },
+  "publishConfig": {
+    "@trung37:registry": "https://npm.pkg.github.com"
   },
   "types": "dist/index",
   "files": [
@@ -75,7 +78,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/simonbengtsson/jsPDF-AutoTable.git"
+    "url": "https://github.com/trung37/jsPDF-AutoTable"
   },
   "keywords": [
     "pdf",
@@ -87,5 +90,5 @@
   "bugs": {
     "url": "https://github.com/simonbengtsson/jsPDF-AutoTable/issues"
   },
-  "homepage": "https://simonbengtsson.github.io/jsPDF-AutoTable"
+  "homepage": "https://github.com/trung37/jsPDF-AutoTable"
 }
